add DH67CF,DH67BL,DH67CL aliases to DH67GD

--- a/Plists/SuperIOSensors-Info.plist
+++ b/Plists/SuperIOSensors-Info.plist
@@ -2772,6 +2772,12 @@
 							<integer>0</integer>
 						</dict>
 					</dict>
+					<key>DH67CF</key>
+					<string>DH67GD</string>
+					<key>DH67BL</key>
+					<string>DH67GD</string>
+					<key>DH67CL</key>
+					<string>DH67GD</string>
 				</dict>
 				<key>ASRock</key>
 				<dict>
