--- a/HWMonitor.xcodeproj/xcshareddata/xcschemes/Build Apps.xcscheme
+++ b/HWMonitor.xcodeproj/xcshareddata/xcschemes/Build Apps.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "7E2ACD8B1791B4510061C677"
                BuildableName = "Pre-Build"
                BlueprintName = "Pre-Build"
-               ReferencedContainer = "container:Versioning &amp; Destribution.xcodeproj">
+               ReferencedContainer = "container:Versioning And Distribution.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
