--- a/FakeSMC/FakeSMC-Info.plist
+++ b/FakeSMC/FakeSMC-Info.plist
@@ -43,6 +43,8 @@
 		</dict>
 		<key>FakeSMC</key>
 		<dict>
+			<key>RM,Version</key>
+			<string>${PRODUCT_NAME} HWSENSORS_REVISION</string>
 			<key>CFBundleIdentifier</key>
 			<string>FAKESMC_BUNDLE</string>
 			<key>Configuration</key>
