add ACID from MacBookAir6,2 to avoid powerd 'failed to read current rating'; info courtesy JVital2013 and Ludacrisvp

--- a/FakeSMC/FakeSMC-Info.plist
+++ b/FakeSMC/FakeSMC-Info.plist
@@ -81,6 +81,11 @@
 				</dict>
 				<key>Keys</key>
 				<dict>
+					<key>ACID</key>
+					<array>
+						<string>ch8*</string>
+						<data>hfwETdgSevQ=</data>
+					</array>
 					<key>NATJ</key>
 					<array>
 						<string>ui8</string>
